--- a/MatplotlibExample.ipynb
+++ b/MatplotlibExample.ipynb
@@ -2,58 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib.util\n",
-    "spec = importlib.util.spec_from_file_location(\"Net.py\", \"C:/Users/kasya_000/PycharmProjects/NeuralNetwork/Net.py\")\n",
-    "Net = importlib.util.module_from_spec(spec)\n",
-    "spec.loader.exec_module(Net)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Net' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-249d76027316>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNeuralNetwork\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mweights\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Net' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 0.,  1.],\n       [ 1.,  0.],\n       [ 1.,  1.]]), array([[ 0.,  0.],\n       [ 0.,  0.],\n       [ 0.,  0.]]), array([[ 0.17198269,  0.90167554,  0.        ],\n       [ 0.17198269,  0.90167554,  0.        ],\n       [ 0.17198269,  0.90167554,  0.        ]])]\nBiases:\n[array([-0.49115158, -1.13978341]), array([ 0.17198269,  0.90167554, -1.31386555])]\n[array([1, 2, 3]), array([ 0.,  0.]), array([ 0.        ,  0.        ,  2.76882901])]\n"
      ]
     }
    ],
    "source": [
+    "import importlib.util\n",
     "import numpy as np\n",
-    "n = Net.NeuralNetwork([2,3,2])\n",
-    "weights = np.array(n.weights)\n",
-    "print (weights)"
+    "spec = importlib.util.spec_from_file_location(\"Net.py\", \"Net.py\")\n",
+    "Net = importlib.util.module_from_spec(spec)\n",
+    "spec.loader.exec_module(Net)\n",
+    "n = Net.NeuralNetwork([3,2,3])\n",
+    "inputs = np.array([1,2,3])#,[4.0,5.0,6.0],[7.0,8.0,9.0]])\n",
+    "print(n.run(inputs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3]\n [2 4]]\n"
+     ]
+    }
+   ],
    "source": [
-    "[1,2,3] * [4,5,6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "x = np.array[[1,2],[3,4]]\n",
-    "np.repeat(x, 2)"
+    "x = np.array([[1,2],[3,4]])\n",
+    "print(x.transpose())"
    ]
   },
   {
